--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,17 @@
 @import url(./root.css);
 
 /* layout */
-#header{width: 100%; padding: 3rem 0; background: transparent;  position: fixed; top: 0; left: 0; z-index: 999; }
+#header{width: 100%; padding: 3rem 0; background: transparent;  position: absolute; top: 0; left: 0; z-index: 999; }
+#header.drop{position: fixed; animation: dropheader 0.3s; background: var(--base-beige);}
 #content{display: flex; flex-direction: column;}
 
+@keyframes dropheader {
+  0%{top: -14rem;}
+  100%{top: 0rem;}
+}
+
 /* header */
-#header>.inner{padding-top: 2rem;}
+#header>.inner{padding-top: 2rem; background: none;}
 .header{height: 100%;}
 .menu ul{margin: 0 !important;}
 .menu ul li{margin-right: 7rem;}
@@ -240,8 +246,8 @@
     .more-btn img{width: 30px; height: 25px;}
 
     /* banner */
-    .banner-bg img.banner-bg-img{height: 50vh;}
-    .banner-bg2{height: 50vh;}
+    .banner-bg img.banner-bg-img{height: 80vh;}
+    .banner-bg2{height: 80vh;}
     .banner-bg2>.banner-text p{font-size: 4rem;}
     .banner-bg2 .banner-img2{width: 40rem;}
     .banner-text p.first{margin-top: 4rem;}
@@ -256,7 +262,7 @@
     .text-wrap{display: none;}
     .img-wrap{display: none;}
     .oven-mobile{display: block; background: var(--base-beige);} 
-    .oven-mobile h2{font-size: 7rem; font-weight: bold; color: var(--base-red); text-align: center;}
+    .oven-mobile h2{font-size: 5rem; font-weight: bold; color: var(--base-red); text-align: center; margin: 2rem 0;}
     .oven-slide-wrap{ padding-bottom: 3rem;}
     .mfood{width: 20rem; margin: 0 2.5rem; position: relative; border-radius: 10px;}
     .mfood::after{position: absolute; bottom: 0; left: 0; width: 100%; height: 4rem; background: rgba(0, 0, 0, 0.5); text-align: center; font-size: 2rem; font-weight: bold; color: var(--text-white);}
