--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url(./root.css);
 
 /* layout */
 #header{width: 100%; padding: 3rem 0; background: transparent;  position: absolute; top: 0; left: 0; z-index: 999; }
@@ -162,6 +161,41 @@
   80%{opacity: 1;}
   100%{opacity: 1;}
 }
+
+
+/* goobnew */
+.goobnews{}
+.news-img-wrap{flex-basis: 65%; background: var(--base-beige);}
+.news-around-wrap{text-align: center;}
+.news-around-wrap h2{font-size: 8rem;}
+.news-around{position: relative; padding: 3rem; display: inline-block; overflow: hidden; height: 29rem;}
+.news-img{display: inline-block; }
+.news-img img{}
+.news-around-text-wrap{position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
+.news-around-text{height: 3rem; position: absolute; background: var(--base-red);}
+.news-around-text:nth-child(1){top: 0; left: 0;}
+.news-around-text:nth-child(2){top: 235%; right: 0; transform-origin: top right; transform: rotate(90deg);}
+.news-around-text:nth-child(3){top: 100%; left: 0; transform-origin: top left; transform: rotate(270deg);}
+.news-around-text:nth-child(4){right: 0; bottom: 0; transform: rotate(180deg);}
+.text-goobne{color: var(--text-white); font-size: 2rem; transform: translateX(0%);}
+
+.news-text-wrap{flex-basis: 35%; background: var(--base-white);}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
