--- a/css/style.css
+++ b/css/style.css
@@ -179,8 +179,10 @@
 .news-around-text:nth-child(4){right: 0; bottom: 0; transform: rotate(180deg);}
 .text-goobne{color: var(--text-white); font-size: 2rem; transform: translateX(0%);}
 
-.news-text-wrap{flex-basis: 35%; background: var(--base-white);}
-
+.news-text-wrap{flex-basis: 35%; background: var(--base-white); flex-direction: column;}
+.news-title{font-size: 5rem; justify-content: center;}
+.news-text{flex-basis: 20%; width: 40rem;}
+.news-text p{font-size: 2rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
 
 
 
