--- a/css/root.css
+++ b/css/root.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Righteous&family=Rubik:wght@400;500;600;700;800;900&display=swap');
 
 /* layout */
-html, body{margin: 0; padding: 0; font-size: 10px;}
+html, body, h1, h2, h3, h4, h5{margin: 0; padding: 0; font-size: 10px;}
 .inner{width: 90%; height: inherit; margin: 0 auto; background: rgba(0, 0, 0, 0.3);}
 dt, dd, ul, li, p{margin: 0; padding: 0;}
 input, button{border: none; outline: none;}
