--- a/css/style.css
+++ b/css/style.css
@@ -188,9 +188,20 @@
 .news-text p{margin: 0 auto; display: block; width: 55rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 3rem; }
 .goobnews-m{display: none;}
 
+/* goobster */
+.goobster{position: relative;}
+.goobster-wrap{width: 100%; height: 20rem; display: flex;}
+.goobster-bg3{flex-basis: 30%;}
+.goobster-bg5{flex-basis: 50%;}
+.goobster-bg7{flex-basis: 70%; text-align: center; justify-content: center;}
+.goobster-bg7 h2{font-size: 8rem; padding-left: 8.5rem; background: url(../img/goobster/title-instar.svg) no-repeat left 3rem;}
+.goobster-beige{background: var(--base-beige); line-height: 100%;}
 
-
-
+.goobster-img{position: absolute; top: 50%; left: 0; transform: translateY(-50%); background: #fff; padding: 2rem 0;}
+.goobster-img ul{}
+.goobster-img ul li{width: 20rem; height: 20rem; margin-right: 2rem;}
+.goobster-img ul li a{display: block;}
+.goobster-img ul li a img{width: 100%;}
 
 
 
