--- a/css/style.css
+++ b/css/style.css
@@ -190,18 +190,19 @@
 
 /* goobster */
 .goobster{position: relative;}
-.goobster-wrap{width: 100%; height: 20rem; display: flex;}
+.goobster-wrap{width: 100%; height: 30rem; display: flex;}
 .goobster-bg3{flex-basis: 30%;}
 .goobster-bg5{flex-basis: 50%;}
 .goobster-bg7{flex-basis: 70%; text-align: center; justify-content: center;}
-.goobster-bg7 h2{font-size: 8rem; padding-left: 8.5rem; background: url(../img/goobster/title-instar.svg) no-repeat left 3rem;}
+.goobster-bg7 h2{font-size: 8rem; padding-left: 8.5rem; color: #D4000B;}
+.goobster-bg7 h2 img{filter: invert(15%) sepia(92%) saturate(4626%) hue-rotate(349deg) brightness(79%) contrast(116%);}
 .goobster-beige{background: var(--base-beige); line-height: 100%;}
 
-.goobster-img{position: absolute; top: 50%; left: 0; transform: translateY(-50%); background: #fff; padding: 2rem 0;}
-.goobster-img ul{}
-.goobster-img ul li{width: 14.5%; height: 20rem; margin-right: 2rem;}
+.goobster-img{position: absolute; top: 50%; left: 0; transform: translateY(-50%); background: #D4000B; height: auto;}
+.goobster-img ul{padding: 2rem 0; position: relative;}
+.goobster-img ul li{width: 14.5%;margin-right: 2rem;}
 .goobster-img ul li a{display: block;}
-.goobster-img ul li a img{width: 100%;}
+.goobster-img ul li a img{width: 100%; height: 100%;}
 
 
 
@@ -239,6 +240,9 @@
   .news-title h3{font-size: 5rem; margin: 2rem 0;}
   .news-text.active p{width: 55rem;}
   .news-text p{width: 45rem;}
+
+  /* goobster */
+  .goobster-wrap{height: 25rem;}
 }
 
 @media screen and (max-width: 1350px) {
@@ -261,6 +265,9 @@
     .news-title h3{font-size: 4rem; margin: 2rem 0;}
     .news-text.active p{width: 40rem;}
     .news-text p{width: 30rem; font-size: 2.5rem;}
+
+      /* goobster */
+  .goobster-wrap{height: 20rem;}
 }
 
 
@@ -308,13 +315,18 @@
     /* goobnew */
     .goobnews-pc{padding: 2rem 0;}
     .news-around{height: 23rem;}
-    .news-around-wrap h2{margin: 0.5rem 0; font-size: 4rem;}
+    .news-around-wrap h2{margin: 0.5rem 0; font-size: 5rem;}
     .news-img{ width: 25rem; height: 23rem;}
     .news-img img{height: 23rem;}
     .news-img img{height: 100%;}
     .news-text.active p{width: 35rem;}
     .news-title h3{font-size: 3rem; margin: 0.5rem 0;}
     .news-text p{width: 25rem; font-size: 2.5rem; }
+
+          /* goobster */
+  .goobster-wrap{height: 15rem;}
+  .goobster-bg7 h2{font-size: 5rem;}
+  .goobster-bg7 h2 img{width: 3.5rem;}
 }
 
 @media screen and (max-width: 768px) {
@@ -363,5 +375,10 @@
       .goobnews-m ul>li .mgoobnews-text{flex-basis: 70%;}
       .goobnews-m ul>li .mgoobnews-text h4{font-size: 2.5rem;}
       .goobnews-m ul>li .mgoobnews-text p{font-size: 2rem;}
+
+                /* goobster */
+  .goobster-wrap{height: 13rem;}
+  .goobster-bg7 h2{font-size: 4rem;}
+  .goobster-bg7 h2 img{width: 3rem;}
 
 }
