--- a/css/style.css
+++ b/css/style.css
@@ -173,10 +173,10 @@
 .news-img img{width: 100%; height: 100%;}
 .news-around-text-wrap{position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
 .news-around-text{height: 3rem; position: absolute; background: var(--base-red);}
-.news-around-text:nth-child(1){top: 0; left: 0;}
-.news-around-text:nth-child(2){top: 300%; right: 0; transform-origin: top right; transform: rotate(90deg);}
-.news-around-text:nth-child(3){top: 100%; left: 0; transform-origin: top left; transform: rotate(270deg);}
-.news-around-text:nth-child(4){right: 0; bottom: 0; transform: rotate(180deg);}
+.news-around-text:nth-child(1){top: 0; left: 0; z-index: 1;}
+.news-around-text:nth-child(2){top: 300%; right: 0; transform-origin: top right; transform: rotate(90deg); z-index: 2;}
+.news-around-text:nth-child(3){top: 100%; left: 0; transform-origin: top left; transform: rotate(270deg); z-index: 4;}
+.news-around-text:nth-child(4){right: 0; bottom: 0; transform: rotate(180deg); z-index: 3;}
 .text-goobne{color: var(--text-white); font-size: 2rem; transform: translateX(0%);}
 
 .news-text-wrap{width: 35%; background: var(--base-white); flex-direction: column;}
@@ -238,7 +238,6 @@
 
 .footer-up{padding: 3.5rem 0 3rem; border-bottom: 1px solid rgba(255, 255, 255, 0.5);}
 
-.fnumber{}
 .fnumber>ul{overflow: hidden; margin-top: 1rem;}
 .fnumber>ul>li{float: left; margin-right: 2rem;}
 .fnumber>ul>li>p{display: inline-block; vertical-align: middle;  color: var(--text-white);}
